--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -2,7 +2,7 @@
 
 // インナー幅設定
 // コンテンツのインナー幅（最も共通の幅が多い部分）
-$inner: 1100px;
+$inner: 1080px;
 // ※キュンパス幅ではなくインナーの幅を指す
 
 // 余白
@@ -13,17 +13,19 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
-$second-font-family: "";
+$font-family-en: "Gotu", sans-serif;
+$font-family-en2: "Lato", sans-serif;
+$font-family-jp: "Noto Sans JP", sans-serif;
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
-  font-family: $base-font-family;
+  font-family: $font-family-jp;
 }
 
 // フォントウェイト
 $regular: 300;
 $normal: 400;
+$medium: 500;
 $bold: 700;
 
 ////////////////////
@@ -31,5 +33,6 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
+$black: #0d2936;
 $white: #fff;
+$green: #408f95;
