--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -7,7 +7,7 @@ $inner: 1080px;
 
 // 余白
 $padding-pc: 25px;
-$padding-sp: 20px;
+$padding-sp: 15px;
 
 ////////////////////
 // フォント設定
@@ -33,6 +33,7 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #0d2936;
+$dark-green: #0d2936;
 $white: #fff;
 $green: #408f95;
+$light-green: #ddf0f1;
