--- a/src/sass/module/_section-header.scss
+++ b/src/sass/module/_section-header.scss
@@ -4,7 +4,7 @@
   font-size: rem(32);
   font-family: $font-family-en;
   text-transform: capitalize;
-  color: $black;
+  color: $dark-green;
   text-align: center;
   line-height: 1;
 
@@ -13,8 +13,20 @@
   }
 }
 
+.section-header__title--white {
+  color: $white;
+}
+
 .section-header__title span {
   color: $green;
+}
+
+.section-header__title span {
+  color: $green;
+}
+
+.section-header__title--white span {
+  color: #ddf0f1;
 }
 
 .section-header__sub {
@@ -23,4 +35,8 @@
   color: $green;
   line-height: 1.5;
   text-align: center;
+  margin-top: rem(4);
+  @include mq("md") {
+    margin-top: rem(8);
+  }
 }
