--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -1,31 +1,12 @@
 @use "global" as *;
 
-.blog {
-  @include mq("md") {
-    position: relative;
-    padding-top: rem(100);
-  }
-}
-
-.blog:before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60.168%;
-  background-image: url(../images/common/blog-bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -1;
-}
-
 .blog-card {
   margin-top: rem(24);
   display: grid;
   gap: rem(40);
   @include mq("md") {
     grid-template-columns: repeat(3, 1fr);
+    margin-top: rem(80);
   }
 }
 
