--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -8,10 +8,12 @@
   font-family: $font-family-en;
   background-color: $green;
   color: $white;
-  display: inline-block;
-  // padding: rem(16) rem(40);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: rem(16) rem(10);
   line-height: calc(22 / 14);
-  z-index: 10;
+  // z-index: 10;
 }
 
 .button::before {
@@ -25,61 +27,71 @@
   z-index: -1;
 }
 
-.button::after {
-  background-color: $white;
-  color: $green;
-  border: 1px solid $green;
-  position: absolute;
-  top: 0;
-  left: 0;
+.button span {
+  display: inline-block;
+}
+
+.button span::after {
+  display: inline-block;
+  margin-left: rem(8);
   content: "";
-  width: 100%;
-  height: 100%;
-  transform: scale(0, 1);
-  transform-origin: left top;
-  transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
-  z-index: -1;
+  background-image: url(../images/common/button-arrow_1.svg);
+  width: rem(40);
+  height: rem(6);
+  background-repeat: no-repeat;
+  background-size: contain;
+  // z-index: -1;
 }
 
 .button:hover {
   color: $green;
-}
-
-.button:hover::after {
-  transform: scale(1, 1);
-}
-
-.button span {
-  position: relative;
-  display: inline-block;
-  height: inherit;
-  padding: rem(16) rem(88) rem(16) rem(40);
-}
-
-.button span::before {
-  position: absolute;
-  content: "";
-  width: rem(6);
-  height: rem(1);
   background-color: $white;
-  border-radius: 2px;
-  transform: rotate(45deg);
-  top: 45.5%;
-  right: rem(39);
+  border: 1px solid $green;
 }
 
-.button span::after {
-  position: absolute;
+.button:hover span::after {
   content: "";
+  background-image: url(../images/common/button-arrow_2.svg);
   width: rem(40);
-  height: rem(1);
-  background-color: $white;
-  border-radius: 2px;
-  top: 50%;
-  margin-left: rem(8);
+  height: rem(6);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-.button span:hover::before,
-.button span:hover::after {
-  background-color: $green;
-}
+// .button span {
+//   position: relative;
+//   display: inline-block;
+//   height: inherit;
+//   padding: rem(16) rem(88) rem(16) rem(40);
+// }
+
+// .button span::before {
+//   position: absolute;
+//   content: "";
+//   // background-image: url(../images/common/button-arrow_2.svg);
+//   width: rem(6);
+//   height: rem(1);
+//   background-color: $white;
+//   border-radius: 2px;
+//   transform: rotate(45deg);
+//   top: 45.5%;
+//   right: rem(39);
+// }
+
+// .button span::after {
+//   position: absolute;
+//   content: "";
+//   width: rem(40);
+//   height: rem(1);
+//   background-color: $white;
+//   border-radius: 2px;
+//   top: 50%;
+//   margin-left: rem(8);
+// }
+
+// .button span:hover::before,
+// .button span:hover::after {
+//   background-color: $green;
+// }
+
+// background-image: url(../images/common/button-arrow_1);
