--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -1,16 +1,64 @@
 @use "global" as *;
+
 .campaign {
+  overflow-x: hidden;
+}
+
+.campaign__swiper-wrap {
   margin-top: rem(24);
-  // overflow-x: hidden; //水平スクロールバーが表示されなくなる
+  margin-right: calc(50% - 50vw);
+  width: 100vw;
+  padding: 4px 0;
   @include mq("md") {
-    margin-top: rem(120);
+    margin-top: rem(40);
   }
 }
 
-.campaign__swiper {
-  margin-top: rem(24);
+.swiper {
+  padding: 4px 0;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  position: relative;
+  display: none;
   @include mq("md") {
-    margin-top: rem(40);
+    display: flex;
+  }
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  @include mq("md") {
+    position: absolute;
+    content: "";
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: rem(80);
+    height: rem(80);
+    margin: auto;
+  }
+}
+
+.swiper-button-prev::after {
+  top: rem(-28);
+  left: rem(900);
+}
+
+.swiper-button-next::after {
+  top: rem(-50);
+  left: rem(700);
+}
+
+.swiper-button-prev::after {
+  @include mq("md") {
+    background-image: url(../images/common/navigation-prev.png);
+  }
+}
+
+.swiper-button-next::after {
+  @include mq("md") {
+    background-image: url(../images/common/navigation-next.png);
   }
 }
 
