--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -14,13 +14,29 @@
 }
 
 .information__img {
-  width: 100%;
+  @include mq("md") {
+    position: relative;
+    width: 100%;
+  }
+}
+.information__img div.color {
+  @include mq("md") {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: $green;
+  }
 }
 
 .information__img img {
-  width: 100%;
-  aspect-ratio: 345 / 227;
-  object-fit: cover;
+  @include mq("md") {
+    display: block;
+    width: 100%;
+    filter: none;
+  }
 }
 
 .information__body {
