--- a/src/sass/module/_layout-about-us.scss
+++ b/src/sass/module/_layout-about-us.scss
@@ -1,9 +1,9 @@
 @use "global" as *;
 
 .layout-about-us {
-  // position: relative;
   margin-top: rem(80);
   @include mq("md") {
     margin-top: rem(140);
+    position: relative;
   }
 }
