--- a/src/sass/page/_contact-layout.scss
+++ b/src/sass/page/_contact-layout.scss
@@ -3,4 +3,8 @@
 .contact-layout {
   margin-top: rem(54);
   margin-bottom: rem(100);
+  @include mq("md") {
+    margin-top: rem(140);
+    position: relative;
+  }
 }
