--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -1,39 +1,100 @@
 @use "global" as *;
 
+.contact::before {
+  @include mq("md") {
+    position: absolute;
+    content: "";
+    background-image: url(../images/common/contact-bg-fish.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: rem(301);
+    height: rem(138);
+    top: rem(-37);
+    right: calc(50% - min(50vw, rem(670)));
+  }
+}
+
 .contact__wrap {
-  //   display: flex;
-  //   justify-content: center;
-  //   align-items: center;
-  //
+  @include mq("md") {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: rem(80) 0;
+    box-shadow: rem(4) rem(4) rem(10) rgba(0, 0, 0, 0.25);
+  }
+}
+
+.contact__info {
+  @include mq("md") {
+    max-width: rem(440);
+    width: 100%;
+    margin-right: rem(82);
+  }
 }
 
 .contact__logo {
+  position: relative;
   width: 100%;
   max-width: rem(174);
   text-align: center;
-  border-bottom: 1px solid $green;
+  // border-bottom: 1px solid $green;
   padding-bottom: rem(6);
   text-align: center;
   margin: 0 auto;
+}
+
+.contact__logo:before {
+  background-color: #408f95;
+  bottom: 0;
+  content: "";
+  height: 1px;
+  position: absolute;
+  width: rem(295);
+  left: 50%;
+  transform: translateX(-50%);
+  @include mq("md") {
+    width: rem(440);
+  }
 }
 
 .contact__logo img {
   width: 100%;
   height: 100%;
   object-fit: contain;
-  // text-shadow: rem(0) rem(4) rem(4) rgba(0, 0, 0, 0.25);
 }
 
 .contact__detail {
   text-align: center;
   margin-top: rem(16);
+  @include mq("md") {
+    display: flex;
+    margin-top: rem(24);
+  }
 }
 .contact__lists-wrap {
-  display: flex;
+  @include mq("md") {
+    display: flex;
+  }
+}
+
+.contact__list {
+  font-size: rem(16);
 }
 
 .contact__list:not(:first-child) {
   margin-top: rem(4);
+}
+
+.contact__map-wrap {
+  margin-top: rem(16);
+  width: 100%;
+  max-width: rem(295);
+  margin-left: auto;
+  margin-right: auto;
+  @include mq(md) {
+    max-width: rem(273);
+    margin-top: 0;
+  }
 }
 
 .contact__map {
@@ -41,9 +102,8 @@
   width: 100%;
   height: 0;
   padding-top: 54.23%;
-  margin-top: rem(16);
+
   @include mq("md") {
-    margin-top: rem(24);
   }
 }
 
@@ -57,16 +117,24 @@
 
 .contact__contents {
   margin-top: rem(40);
+  @include mq("md") {
+    border-left: 1px solid $green;
+    padding-left: rem(81);
+    margin-top: 0;
+  }
 }
 
 .contact__header-title.section-header__title {
   font-size: rem(80);
-  text-shadow: rem(0) rem(4) rem(4) rgba(0, 0, 0, 0.25);
+  font-weight: normal;
 }
 
 .contact__button-text {
   margin-top: rem(8);
   color: $green;
+  text-align: center;
+  @include mq("md") {
+  }
 }
 
 .contact__button {
