--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -8,6 +8,20 @@
   }
 }
 
+.price::before {
+  @include mq("md") {
+    position: absolute;
+    content: "";
+    background-image: url(../images/common/price-bg-fish.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    width: rem(437);
+    height: rem(201);
+    bottom: rem(60);
+    left: calc(50% - min(50vw, rem(670)));
+  }
+}
+
 .price__wrap {
   margin-top: rem(24);
 
@@ -23,6 +37,20 @@
 .price__img {
   width: 100%;
   @include mq("md") {
+    position: relative;
+    margin-left: rem(93);
+  }
+}
+
+.price__img div.color {
+  @include mq("md") {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: $green;
   }
 }
 
@@ -37,11 +65,19 @@
     width: 100%;
     aspect-ratio: 492 / 746;
     object-fit: cover;
+    display: block;
+    filter: none;
   }
 }
 
 .price__lists {
   margin-top: rem(40);
+}
+
+.price__lists:first-child {
+  @include mq("md") {
+    margin-top: 0;
+  }
 }
 
 .price__list {
@@ -58,6 +94,9 @@
   line-height: 1;
   padding-bottom: rem(4);
   border-bottom: 1px solid $green;
+  @include mq("md") {
+    text-align: left;
+  }
 }
 
 .price__menu {
@@ -77,7 +116,16 @@
   text-align: right;
 }
 
+.price__contents {
+  @include mq("md") {
+    width: 100%;
+  }
+}
+
 .price__button {
   margin-top: rem(40);
   text-align: center;
+  @include mq("md") {
+    margin-top: rem(80);
+  }
 }
