--- a/src/sass/page/_voice-card.scss
+++ b/src/sass/page/_voice-card.scss
@@ -62,7 +62,20 @@
   width: 100%;
   margin-left: rem(13);
   @include mq("md") {
+    position: relative;
     margin-left: rem(16);
+  }
+}
+
+.voice-card__img div.color {
+  @include mq("md") {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: $green;
   }
 }
 
@@ -70,4 +83,8 @@
   width: 100%;
   aspect-ratio: 151 / 117;
   object-fit: cover;
+  @include mq("md") {
+    display: block;
+    filter: none;
+  }
 }
