--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -18,6 +18,9 @@
   width: 100%;
   aspect-ratio: 280 / 188;
   object-fit: cover;
+  @include mq("md") {
+    aspect-ratio: 333 / 223;
+  }
 }
 
 .campaign-card__item-body {
