--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -8,16 +8,20 @@
 }
 
 .blog::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60.168%;
-  background-image: url(../images/common/blog-bg.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  z-index: -1;
+  display: none;
+  @include mq("md") {
+    display: block;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 60.168%;
+    background-image: url(../images/common/blog-bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
+  }
 }
 
 .blog::after {
