--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -125,6 +125,8 @@
 .price__button {
   margin-top: rem(40);
   text-align: center;
+  position: relative;
+  z-index: 1;
   @include mq("md") {
     margin-top: rem(80);
   }
