--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -33,8 +33,8 @@
     background-size: contain;
     width: rem(437);
     height: rem(201);
-    top: rem(17);
-    left: calc(50% - min(50vw, rem(670)));
+    top: rem(25);
+    left: calc(50% - min(50vw, rem(623)));
   }
 }
 
@@ -47,5 +47,13 @@
 .blog__header-title span {
   @include mq("md") {
     color: $light-green;
+  }
+}
+
+.blog__button {
+  margin-top: rem(40);
+  text-align: center;
+  @include mq("md") {
+    margin-top: rem(80);
   }
 }
