--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -3,7 +3,6 @@
 .button {
   position: relative;
   width: rem(202);
-  // height: 100%;
   font-size: rem(14);
   font-family: $font-family-en;
   background-color: $green;
@@ -15,6 +14,20 @@
   line-height: calc(22 / 14);
   border: 1px solid $green;
   z-index: 10;
+}
+
+.button::after {
+  background-color: $white;
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  width: 100%;
+  height: 100%;
+  transform: scale(0, 1);
+  transform-origin: left top;
+  transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
+  z-index: -1;
 }
 
 .button::before {
@@ -29,25 +42,9 @@
   z-index: -1;
 }
 
-.button::after {
-  color: $green;
-  background-color: $white;
-  // background: #ff701e;
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "";
-  width: 100%;
-  height: 100%;
-  display: block;
-  // transform: scale(0, 1);
-  // transform-origin: left top;
-  // transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
-  z-index: -1;
-}
-
 .button span {
   display: inline-block;
+  position: relative;
 }
 
 .button span::after {
@@ -60,15 +57,12 @@
   height: rem(6);
   background-repeat: no-repeat;
   background-size: contain;
-  // z-index: -1;
+  transform: scale(1.3);
 }
 
 .button:hover {
-  //ホバーしたら背景白、文字緑
+  //ホバーしたら文字緑
   color: $green;
-  background-color: $white;
-  // transform: scale(1, 1);
-  // border: 1px solid $green;
 }
 
 .button:hover span::after {
@@ -81,6 +75,7 @@
   background-size: contain;
 }
 
-// .button:hover::after {
-//   transform: scale(1, 1);
-// }
+.button:hover::after {
+  transform: scale(1, 1);
+  // display: inline-block;
+}
