--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -2,6 +2,17 @@
 
 .campaign-card {
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+  max-width: rem(280);
+  @include mq("md") {
+    max-width: rem(333);
+  }
+}
+
+.campaign-card:not(:first-child) {
+  margin-left: rem(24);
+  @include mq("md") {
+    margin-left: rem(40);
+  }
 }
 
 .campaign-card a {
@@ -24,8 +35,11 @@
 }
 
 .campaign-card__item-body {
-  padding: rem(16) rem(16) rem(24);
+  padding: rem(16) rem(16) rem(20);
   height: 100%;
+  @include mq("md") {
+    padding: rem(27) rem(16) rem(40) rem(16);
+  }
 }
 
 .campaign-card__meta {
@@ -43,31 +57,42 @@
   font-size: rem(12);
   line-height: 1.8333;
   border: 1px solid $green;
-  padding: rem(4) rem(12);
+  padding: rem(5.5) rem(11);
+  @include mq("md") {
+    padding: rem(8) rem(15);
+  }
 }
 
 .campaign-card__category {
   font-size: rem(16);
   font-weight: $medium;
   color: $dark-green;
-  margin-top: rem(4);
+  margin-top: rem(9);
   line-height: 1.5;
 }
 
 .campaign-card__contents {
-  margin-top: rem(8);
+  margin-top: rem(9);
+  @include mq("md") {
+    margin-top: rem(16);
+  }
 }
 
 .campaign-card__title {
-  padding-top: rem(8);
+  font-size: rem(14);
+  line-height: 1.5;
   text-align: center;
+  line-height: 1;
+  @include mq("md") {
+    font-size: rem(16);
+  }
 }
 
 .campaign-card__price-body {
   display: flex;
   justify-content: center;
-  align-items: center;
-  margin-top: rem(8);
+  align-items: flex-end;
+  margin-top: rem(13);
 }
 
 .campaign__price,
@@ -81,6 +106,9 @@
 .campaign-card__price {
   font-size: rem(20);
   position: relative;
+  @include mq("md") {
+    font-size: rem(24);
+  }
 }
 
 .campaign-card__price:before {
@@ -96,5 +124,9 @@
 .campaign-card__price-discount {
   font-size: rem(32);
   color: $green;
-  margin-left: rem(16);
+  margin-left: rem(17);
+  @include mq("md") {
+    font-size: rem(40);
+    margin-left: rem(25);
+  }
 }
