--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -5,9 +5,10 @@
 }
 
 .information__wrap {
-  margin-top: rem(24);
+  margin-top: rem(29);
 
   @include mq("md") {
+    margin-top: rem(39);
     display: flex;
     align-items: center;
   }
@@ -17,6 +18,7 @@
   @include mq("md") {
     position: relative;
     width: 100%;
+    max-width: rem(540);
   }
 }
 .information__img div.color {
@@ -40,7 +42,7 @@
 }
 
 .information__body {
-  margin-top: rem(24);
+  margin-top: rem(28);
   @include mq("md") {
     margin-top: 0;
     margin-left: rem(48);
@@ -72,6 +74,4 @@
 .information__button {
   margin-top: rem(40);
   text-align: center;
-  position: relative;
-  z-index: 1;
 }
