--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -1,7 +1,7 @@
 @use "global" as *;
 
 .price {
-  padding: rem(80) 0;
+  padding: rem(85) 0;
   background-color: $light-green;
   @include mq("md") {
     padding: rem(100) 0;
@@ -18,12 +18,12 @@
     width: rem(437);
     height: rem(201);
     bottom: rem(60);
-    left: calc(50% - min(50vw, rem(670)));
+    left: calc(50% - min(50vw, rem(621)));
   }
 }
 
 .price__wrap {
-  margin-top: rem(24);
+  margin-top: rem(26);
 
   @include mq("md") {
     display: flex;
@@ -70,13 +70,20 @@
   }
 }
 
-.price__lists {
-  margin-top: rem(40);
+.price__contents {
+  margin-top: rem(46);
+  @include mq("md") {
+    margin-top: rem(8);
+  }
 }
 
-.price__lists:first-child {
+.price__lists {
+}
+
+.price__lists:not(:first-child) {
+  margin-top: rem(47);
   @include mq("md") {
-    margin-top: 0;
+    margin-top: rem(48);
   }
 }
 
@@ -104,13 +111,16 @@
 
 .price__name,
 .price__cost {
-  font-size: rem(12);
+  font-size: rem(16);
   line-height: 1.714;
   color: $dark-green;
+  @include mq("md") {
+    line-height: 1.5;
+  }
 }
 
 .price__cost {
-  max-width: rem(100);
+  max-width: rem(92);
   width: 100%;
   flex-shrink: 0;
   text-align: right;
@@ -125,8 +135,6 @@
 .price__button {
   margin-top: rem(40);
   text-align: center;
-  position: relative;
-  z-index: 1;
   @include mq("md") {
     margin-top: rem(80);
   }
