--- a/src/sass/page/_voice-card.scss
+++ b/src/sass/page/_voice-card.scss
@@ -1,8 +1,14 @@
 @use "global" as *;
 
-.voice-card__item a {
-  padding: rem(15) rem(16) rem(24);
+.voice-card__item {
+  padding: rem(10) rem(16) rem(24);
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+  @include mq("md") {
+    padding: rem(25);
+  }
+}
+
+.voice-card__item a {
   height: 100%;
   display: block;
   background-color: $white;
@@ -13,13 +19,23 @@
 .voice-card__wrap {
   display: flex;
   align-items: flex-end;
+  @include mq("md") {
+  }
+}
+
+.voice-card__contents {
+  @include mq("md") {
+    max-width: 276px;
+    width: 100%;
+    margin-top: 24px;
+  }
 }
 
 .voice-card__meta {
   @include mq("md") {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
   }
 }
 
@@ -34,27 +50,34 @@
   font-size: rem(12);
   line-height: 1;
   border: 1px solid $green;
-  padding: rem(4) rem(12);
+  padding: rem(8) rem(11);
   display: inline-block;
   color: $green;
   @include mq("md") {
+    padding: rem(5) rem(15);
+    line-height: 1.8;
   }
 }
 
 .voice-card__title {
   font-size: rem(16);
-  margin-top: rem(13);
+  margin-top: rem(3);
   font-weight: $medium;
   font-family: $font-family-jp;
   border-bottom: 1px solid $green;
   padding-bottom: mt(4);
   @include mq("md") {
     margin-top: rem(8);
+    font-size: rem(24);
   }
 }
 
 .voice-card__text {
-  margin-top: rem(8);
+  margin-top: rem(16);
+  font-size: rem(16);
+  @include mq("md") {
+    margin-top: rem(40);
+  }
 }
 
 .voice-card__img {
