--- a/src/sass/page/_voice.scss
+++ b/src/sass/page/_voice.scss
@@ -9,8 +9,8 @@
     background-size: contain;
     width: rem(301);
     height: rem(138);
-    top: 0;
-    left: calc(50% - min(50vw, rem(650)));
+    top: rem(-119);
+    left: calc(50% - min(50vw, rem(624)));
   }
 }
 .voice::after {
@@ -22,17 +22,18 @@
     background-size: contain;
     width: rem(71);
     height: rem(162);
-    bottom: rem(-25);
+    bottom: rem(-67);
     right: calc(50% - min(50vw, rem(540)));
   }
 }
 
 .voice__items {
-  margin-top: rem(40);
+  margin-top: rem(43);
   display: grid;
   grid-template-columns: repeat(1, 1fr);
   gap: rem(40);
   @include mq("md") {
+    margin-top: rem(28);
     grid-template-columns: repeat(2, 1fr);
   }
 }
@@ -40,4 +41,7 @@
 .voice__button {
   margin-top: rem(40);
   text-align: center;
+  @include mq("md") {
+    margin-top: rem(80);
+  }
 }
