--- a/src/sass/page/_campaign-card.scss
+++ b/src/sass/page/_campaign-card.scss
@@ -95,7 +95,7 @@
   margin-top: rem(13);
 }
 
-.campaign__price,
+.campaign-card__price,
 .campaign-card__price-discount {
   font-family: $font-family-en2;
   font-weight: $bold;
