--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -13,7 +13,7 @@
   @include mq("md") {
     width: rem(301);
     height: rem(138);
-    top: rem(-26);
+    top: rem(-36);
     right: calc(50% - min(50vw, rem(670)));
   }
 }
@@ -21,7 +21,6 @@
 .contact__wrap {
   @include mq("md") {
     display: flex;
-    // justify-content: space-between;
     align-items: center;
     padding: rem(80) rem(112) rem(80) rem(50);
     box-shadow: rem(4) rem(4) rem(10) rgba(0, 0, 0, 0.25);
@@ -32,7 +31,6 @@
   @include mq("md") {
     max-width: 48.3%;
     width: 100%;
-    // padding-left: rem(50);
   }
 }
 
@@ -41,26 +39,11 @@
   width: 100%;
   max-width: rem(174);
   text-align: center;
-  // border-bottom: 1px solid $green;
-  padding-bottom: rem(6);
+  padding-bottom: rem(9);
   margin: 0 auto;
   @include mq("md") {
     max-width: rem(200);
   }
-}
-
-.contact__logo:before {
-  // background-color: #408f95;
-  // bottom: 0;
-  // content: "";
-  // height: 1px;
-  // position: absolute;
-  // width: rem(295);
-  // left: 50%;
-  // transform: translateX(-50%);
-  // @include mq("md") {
-  //   width: rem(440);
-  // }
 }
 
 .contact__logo img {
@@ -74,7 +57,8 @@
   margin-top: rem(16);
   @include mq("md") {
     display: flex;
-    margin-top: rem(24);
+    margin-top: rem(0);
+    padding-top: rem(24);
     border-top: 1px solid $green;
   }
 }
@@ -128,9 +112,9 @@
   margin-top: rem(40);
   @include mq("md") {
     border-left: 1px solid $green;
-    padding-left: rem(81);
+    padding-left: rem(83);
     margin-top: 0;
-    max-width: 36.6%;
+    max-width: 47.03%;
     margin-left: rem(82);
   }
 }
