--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -130,7 +130,7 @@
   transform: translateX(-50%);
   display: block;
   width: rem(32);
-  height: 1px;
+  height: rem(1);
   background-color: $white;
   transition: 0.5s;
 }
@@ -177,18 +177,3 @@
   padding-right: rem(15);
   padding-left: rem(15);
 }
-
-// .header__drawer::before {
-//   content: "";
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   width: 100%;
-//   height: 80px; /* 上80pxの高さ */
-//   background-color: #fff; /* 背景色 */
-//   z-index: -1; /* 下の要素の下に隠れるように */
-// }
-
-// .header__drawer.is-open {
-//   transform: translateX(0);
-// }
