--- a/src/sass/page/_information.scss
+++ b/src/sass/page/_information.scss
@@ -15,12 +15,21 @@
 }
 
 .information__img {
+  width: 100%;
   @include mq("md") {
     position: relative;
-    width: 100%;
     max-width: rem(540);
   }
 }
+
+.information__img img {
+  width: 100%;
+  aspect-ratio: 345/227;
+  object-fit: cover;
+  @include mq("md") {
+  }
+}
+
 .information__img div.color {
   @include mq("md") {
     position: absolute;
