--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -56,11 +56,11 @@
 
 .price__img source {
   width: 100%;
-  // aspect-ratio: 345 / 227;
-  // object-fit: cover;
 }
 
 .price__img img {
+  aspect-ratio: 345 / 227;
+
   @include mq("md") {
     width: 100%;
     aspect-ratio: 492 / 746;
@@ -75,9 +75,6 @@
   @include mq("md") {
     margin-top: rem(8);
   }
-}
-
-.price__lists {
 }
 
 .price__lists:not(:first-child) {
@@ -106,21 +103,19 @@
   }
 }
 
-.price__menu {
-}
-
 .price__name,
 .price__cost {
-  font-size: rem(16);
+  font-size: rem(14);
   line-height: 1.714;
   color: $dark-green;
   @include mq("md") {
     line-height: 1.5;
+    font-size: rem(16);
   }
 }
 
 .price__cost {
-  max-width: rem(92);
+  max-width: rem(90);
   width: 100%;
   flex-shrink: 0;
   text-align: right;
