--- a/src/sass/page/_blog-card.scss
+++ b/src/sass/page/_blog-card.scss
@@ -11,9 +11,12 @@
 }
 
 .blog-card__item {
-  max-width: rem(333);
   width: 100%;
   margin: 0 auto;
+  background-color: $white;
+  @include mq("md") {
+    max-width: rem(333);
+  }
 }
 
 .blog-card__item a {
@@ -21,7 +24,10 @@
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
   height: 100%;
   display: block;
-  background-color: $white;
+}
+
+.blog-card__item a:hover {
+  opacity: 0.7;
 }
 
 .blog-card__img {
