--- a/src/sass/page/_price.scss
+++ b/src/sass/page/_price.scss
@@ -114,11 +114,16 @@
   }
 }
 
+.price__name {
+  text-align: left;
+}
+
 .price__cost {
   max-width: rem(90);
   width: 100%;
   flex-shrink: 0;
   text-align: right;
+  margin-left: rem(15);
 }
 
 .price__contents {
