--- a/src/sass/page/_about-us.scss
+++ b/src/sass/page/_about-us.scss
@@ -15,7 +15,8 @@
     width: rem(194);
     height: rem(181);
     bottom: rem(-140);
-    right: calc(50% - min(50vw, rem(638)));
+    right: calc(50% - min(46vw, rem(638)));
+    z-index: 1;
   }
 }
 
@@ -34,9 +35,9 @@
 }
 
 .about-us__wrapper {
-  margin-top: rem(28);
+  margin-top: rem(50);
   @include mq("md") {
-    margin-top: rem(40);
+    margin-top: rem(120);
   }
 }
 
@@ -65,6 +66,11 @@
 
 .about-us__img-left {
   width: 37.101%;
+  position: absolute;
+  top: rem(-20);
+  @include mq("md") {
+    top: rem(-80);
+  }
 }
 
 .about-us__img-left img {
@@ -74,11 +80,12 @@
 }
 
 .about-us__img-right {
-  position: absolute;
+  // position: absolute;
+  margin-left: auto;
   width: 81.449%;
-  top: 12.264%;
-  left: 18.55%;
-  z-index: -1;
+  // top: 12.264%;
+  // left: 18.55%;
+  // z-index: -1;
 }
 
 .about-us__img-right img {
