--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -22,7 +22,7 @@
   @include mq("md") {
     display: flex;
     align-items: center;
-    padding: rem(80) rem(112) rem(80) rem(50);
+    padding: rem(80) rem(48) rem(80) rem(50);
     box-shadow: rem(4) rem(4) rem(10) rgba(0, 0, 0, 0.25);
   }
 }
@@ -62,10 +62,17 @@
     border-top: 1px solid $green;
   }
 }
+
 .contact__lists-wrap {
   @include mq("md") {
-    display: flex;
+    // display: flex;
     width: 33.18%;
+  }
+}
+
+.contact__lists {
+  @include mq("md") {
+    text-align: left;
   }
 }
 
