--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -21,7 +21,7 @@
   padding-left: rem(15);
 
   @include mq("md") {
-    padding-right: rem(20);
+    padding-right: rem(40);
     padding-left: rem(40);
   }
 }
@@ -59,6 +59,7 @@
 .header__nav-items {
   display: flex;
   height: inherit;
+  gap: rem(40);
 }
 
 .header__nav-item {
@@ -78,7 +79,6 @@
   font-family: $font-family-en;
   font-size: rem(18);
   line-height: 1;
-  padding: 0 rem(20);
 }
 
 .header__nav-item::after {
