--- a/src/sass/page/_contact.scss
+++ b/src/sass/page/_contact.scss
@@ -22,7 +22,7 @@
   @include mq("md") {
     display: flex;
     align-items: center;
-    padding: rem(80) rem(48);
+    padding: rem(80) rem(32);
     box-shadow: rem(4) rem(4) rem(10) rgba(0, 0, 0, 0.25);
   }
 }
@@ -65,8 +65,7 @@
 
 .contact__lists-wrap {
   @include mq("md") {
-    // display: flex;
-    width: 33.18%;
+    min-width: 33.18%;
   }
 }
 
@@ -93,7 +92,7 @@
   @include mq(md) {
     margin-top: rem(0);
     max-width: 62%;
-    margin-left: rem(21);
+    margin-left: rem(16);
   }
 }
 
