--- a/src/sass/page/_campaign-card.scss
+++ b/src/sass/page/_campaign-card.scss
@@ -2,17 +2,10 @@
 
 .campaign-card {
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-  max-width: rem(280);
+  width: rem(280);
   height: auto;
   @include mq("md") {
-    max-width: rem(333);
-  }
-}
-
-.campaign-card:not(:first-child) {
-  // margin-left: rem(24);
-  @include mq("md") {
-    // margin-left: rem(40);
+    width: rem(333);
   }
 }
 
