--- a/src/sass/page/_header.scss
+++ b/src/sass/page/_header.scss
@@ -13,10 +13,15 @@
   }
 }
 
+.header.is-active {
+  background-color: $green;
+}
+
 .header__inner {
   height: inherit;
   display: flex;
   justify-content: space-between;
+
   padding-right: rem(11);
   padding-left: rem(15);
 
@@ -165,14 +170,13 @@
 
 .header__drawer {
   display: none;
-  position: absolute;
-  top: 0;
+  position: fixed;
+  top: 5rem;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: calc(100vh - 5rem);
   background-color: $green;
   overflow-y: scroll;
-  padding-top: rem(62);
   padding-bottom: rem(119);
   padding-right: rem(15);
   padding-left: rem(15);
