--- a/src/sass/page/_mv.scss
+++ b/src/sass/page/_mv.scss
@@ -40,6 +40,7 @@
   font-size: rem(40);
   font-weight: normal;
   letter-spacing: 0.54em;
+  text-indent: 0.1em;
   color: $white;
   @include mq("md") {
     font-size: rem(80);
