--- a/src/sass/page/_layout-campaign.scss
+++ b/src/sass/page/_layout-campaign.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-layout {
+.layout-campaign {
   margin-top: rem(35);
   @include mq("md") {
     margin-top: rem(123);
