--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -11,7 +11,8 @@
 
 .campaign-card a {
   height: 100%;
-  display: block;
+  display: flex;
+  flex-direction: column;
   background-color: $white;
 }
 
@@ -29,6 +30,9 @@
 }
 
 .campaign-card__item-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
   padding: rem(16) rem(16) rem(20);
   @include mq("md") {
     padding: rem(17) rem(16) rem(40) rem(16);
@@ -36,6 +40,7 @@
 }
 
 .campaign-card__meta {
+  flex-grow: 1;
   padding-bottom: rem(8);
   border-bottom: 1px solid $green;
 }
@@ -70,7 +75,6 @@
 
 .campaign-card__contents {
   margin-top: rem(9);
-  flex-grow: 1;
   @include mq("md") {
     margin-top: rem(16);
   }
