--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -1,16 +1,6 @@
 @use "global" as *;
 
 .voice-card {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  gap: rem(40);
-  @include mq("md") {
-    // margin-top: rem(28);
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-.voice-card__item {
   padding: rem(10) rem(16) rem(24);
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
   @include mq("md") {
@@ -44,7 +34,6 @@
 .voice-card__meta {
   @include mq("md") {
     display: flex;
-    justify-content: space-between;
     align-items: flex-end;
   }
 }
@@ -63,9 +52,11 @@
   padding: rem(8) rem(11);
   display: inline-block;
   color: $green;
+
   @include mq("md") {
     padding: rem(5) rem(15);
     line-height: 1.8;
+    margin-left: auto;
   }
 }
 
