--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -48,11 +48,15 @@
   }
 }
 
+.footer__sns-icon:hover {
+  opacity: 0.7;
+}
+
 .footer__sns-icon + .footer__sns-icon {
   margin-left: rem(16);
 }
 
-.footer__sns-icn img {
+.footer__sns-icon img {
   width: 100%;
   height: 100%;
   object-fit: contain;
