--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -20,8 +20,6 @@
 .header__inner {
   height: inherit;
   display: flex;
-  justify-content: space-between;
-
   padding-right: rem(11);
   padding-left: rem(15);
 
@@ -58,6 +56,7 @@
   display: none;
   @include mq("md") {
     display: block;
+    margin-left: auto;
   }
 }
 
@@ -124,6 +123,7 @@
   height: inherit;
   cursor: pointer;
   transition: 0.3s;
+  margin-left: auto;
   @include mq("md") {
     display: none;
   }
@@ -177,7 +177,7 @@
   height: calc(100vh - 5rem);
   background-color: $green;
   overflow-y: scroll;
-  padding-bottom: rem(119);
+  padding-bottom: rem(23);
   padding-right: rem(15);
   padding-left: rem(15);
 }
