--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -23,6 +23,11 @@
   padding: rem(4);
 }
 
+.campaign__slide {
+  width: auto;
+  height: auto;
+}
+
 .campaign__button {
   text-align: center;
   margin-top: rem(33);
