--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -2,26 +2,22 @@
 
 .blog-card {
   width: 100%;
-  // margin: 0 auto;
   background-color: $white;
+  padding: rem(16) rem(16) rem(24) rem(16);
+  box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
+  height: 100%;
+  display: block;
   @include mq("md") {
     max-width: rem(333);
   }
 }
 
-.blog-card a {
-  padding: rem(16) rem(16) rem(24) rem(16);
-  box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-  height: 100%;
-  display: block;
-}
-
-.blog-card a:hover {
-  opacity: 0.7;
-}
-
 .blog-card__img {
   width: 100%;
+}
+
+.blog-card__img:hover {
+  opacity: 0.7;
 }
 
 .blog-card__img img {
