--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -2,18 +2,15 @@
 
 .campaign-card {
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
-  width: rem(280);
-  height: auto;
-  @include mq("md") {
-    width: rem(333);
-  }
-}
-
-.campaign-card a {
+  max-width: rem(280);
+  width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
   background-color: $white;
+  @include mq("md") {
+    max-width: rem(333);
+  }
 }
 
 .campaign-card__img {
