--- a/src/sass/module/_nav-contents.scss
+++ b/src/sass/module/_nav-contents.scss
@@ -8,7 +8,7 @@
 
   @include mq("md") {
     grid-template-columns: repeat(4, 1fr);
-    column-gap: rem(34); //120 34
+    column-gap: rem(34);
     max-width: rem(1080);
   }
 }
@@ -57,7 +57,11 @@
   height: rem(18);
 }
 
-.nav-contents__title:not(:first-child) {
+.nav-contents__title + .nav-contents__title {
+  margin-top: rem(35);
+}
+
+.nav-contents__title:nth-child(n + 3) {
   margin-top: rem(35);
 }
 
