--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -140,3 +140,9 @@
   margin-top: rem(40);
   text-align: center;
 }
+
+.contact__button--margin {
+  @include mq("md") {
+    margin-top: rem(16);
+  }
+}
