--- a/src/sass/module/_tab.scss
+++ b/src/sass/module/_tab.scss
@@ -28,7 +28,7 @@
   text-align: center;
 }
 
-.tab__menu-item.is-active {
+.tab__menu-item.is-tab {
   color: $white;
   background-color: $green;
 }
