--- a/src/sass/module/_sub-campaign.scss
+++ b/src/sass/module/_sub-campaign.scss
@@ -1,94 +1,16 @@
 @use "global" as *;
 
-.sub-campaign {
-  position: relative;
-  width: 100%;
-  height: rem(460);
-  @include mq("md") {
-    height: rem(548);
-  }
-}
-
-.sub-campaign__mv {
-  height: inherit;
-  width: 100%;
-  position: relative;
-}
-
-.sub-campaign__mv::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba($color: $green, $alpha: 0.3);
-}
-
-.sub-campaign__mv-img {
-  height: inherit;
-  width: 100%;
-  object-fit: cover;
-}
-
-.sub-campaign__mv-img img {
-  height: inherit;
-  aspect-ratio: 375 / 460;
-  width: 100%;
-  object-fit: cover;
-  @include mq("md") {
-    aspect-ratio: 1440/548;
-  }
-}
-
-.sub-campaign__mv-title-wrap {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 10;
-  text-align: center;
-  @include mq("md") {
-    top: 59%;
-    left: 50%;
-  }
-}
-
-.sub-campaign__breadcrumb {
-  margin-top: rem(8);
-  @include mq("md") {
-  }
-}
-
 .sub-campaign__tab {
-  position: relative;
+  // position: relative;
   margin-top: rem(52);
   @include mq("md") {
     margin-top: rem(150);
   }
 }
 
-.sub-campaign__tab::before {
-  position: absolute;
-  content: "";
-  background-image: url(../images/common/voice-bg-fish.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-  z-index: -10;
-  width: rem(120);
-  height: rem(55);
-  top: rem(-28);
-  //     bottom: rem(-67);
-  //     right: calc(50% - min(47vw, rem(540)));
-  //   }
+// .sub-campaign__tab::before {
 
-  @include mq("md") {
-    width: rem(301);
-    height: rem(138);
-    top: rem(-75);
-    left: calc(50% - min(47vw, rem(620)));
-  }
-}
+// }
 
 .sub-campaign__cards {
   @include mq("md") {
