--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -7,6 +7,7 @@
   box-shadow: rem(2) rem(2) rem(10) rgba(0, 0, 0, 0.25);
   height: 100%;
   display: block;
+
   @include mq("md") {
     max-width: rem(333);
   }
@@ -14,10 +15,23 @@
 
 .blog-card__img {
   width: 100%;
+  transition: transform 0.6s ease;
 }
 
 .blog-card__img:hover {
   opacity: 0.7;
+}
+
+.blog-card__img.blog-card__img--animation {
+  overflow: hidden;
+}
+
+.blog-card__img.blog-card__img--animation img {
+  transition: all 0.5s ease-in-out;
+}
+
+.blog-card__img.blog-card__img--animation img:hover {
+  transform: scale(1.1);
 }
 
 .blog-card__img img {
