--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.campaign-card.campaign-card--aside {
+  max-width: 100%;
+}
+
 .campaign-card--large {
   @include mq("md") {
     max-width: 100%;
@@ -74,6 +78,10 @@
   @include mq("md") {
     margin-top: rem(2);
   }
+}
+
+.campaign-card__category.campaign-card__category--center {
+  text-align: center;
 }
 
 .campaign-card__category--large {
