--- a/src/sass/module/_blog-cards.scss
+++ b/src/sass/module/_blog-cards.scss
@@ -11,5 +11,7 @@
 .blog-cards.blog-cards--subPage {
   @include mq("md") {
     grid-template-columns: repeat(2, 1fr);
+    column-gap: 40px;
+    row-gap: 80px;
   }
 }
