--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -38,6 +38,15 @@
   }
 }
 
+.blog__inner.inner {
+  padding-right: rem(20);
+  padding-left: rem(20);
+  @include mq("md") {
+    padding-right: rem(25);
+    padding-left: rem(25);
+  }
+}
+
 .blog__items {
   margin-top: rem(30);
   @include mq("md") {
