--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -16,6 +16,12 @@
   z-index: 10;
 }
 
+.button.button--white {
+  background-color: $white;
+  color: $green;
+  border: 1px solid $white;
+}
+
 .button::after {
   background-color: $white;
   position: absolute;
@@ -30,6 +36,10 @@
   z-index: -1;
 }
 
+.button.button--white::after {
+  background-color: $green;
+}
+
 .button::before {
   position: absolute;
   content: "";
@@ -39,6 +49,10 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+}
+
+.button.button--white::before {
+  border: 1px solid $white;
 }
 
 .button span {
@@ -58,8 +72,16 @@
   transform: scale(1.3);
 }
 
+.button.button--white span::after {
+  background-image: url(../images/common/button-arrow_2.svg);
+}
+
 .button:hover {
   color: $green;
+}
+
+.button.button.button--white:hover {
+  color: $white;
 }
 
 .button:hover span::after {
@@ -73,4 +95,8 @@
 
 .button:hover::after {
   transform: scale(1, 1);
+}
+
+.button.button--white:hover span::after {
+  background-image: url(../images/common/button-arrow_1.svg);
 }
